<resources>
    <string name="app_name">sihaluh</string>
    <string name="tab_text_1">Login</string>
    <string name="tab_text_2">Register</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_cart">Cart</string>
    <string name="title_post_job">Post Job</string>
    <string name="title_chat">Chat</string>
    <string name="title_activity_maps">Map</string>
</resources>