<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:title="@string/title_cart" />

    <item
        android:id="@+id/navigation_post_job"
        android:icon="@drawable/ic_baseline_add_shopping_cart_24"
        android:title="@string/title_post_job" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_baseline_chat_24"
        android:title="@string/title_chat" />

</menu>